crates/dioform/tests/derive_contract/fail/tuple_struct.rs
#![allow(dead_code)]

use dioform::Form;

#[derive(Form)]
struct TupleForm(String);

fn main() {}
